Fixed gap on mobile screens, font-size in header links are smaller

--- a/client/styles/Modules/Header.module.scss
+++ b/client/styles/Modules/Header.module.scss
@@ -61,8 +61,13 @@
                         padding: 0 1em;
                         width: 100%;
                         font-weight: 300;
-                        font-size: inherit;
+                        font-size: 12px;
                         cursor: pointer;
+
+                        @include md {
+                            font-size: inherit;
+                        }
+
                     }
 
                 }
